Messing with spacing (issue #14)

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
 }
 
 .container {
-    margin: 100px 60px;
     padding: 100px 15px;
     width: 100%;
     max-width: 100%;
